project(libCloudundancy)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

include_directories(${CMAKE_SOURCE_DIR})
if(UNIX)
   include_directories(${CMAKE_CURRENT_SOURCE_DIR}) # Includes directory libCloudundancy so that pch.h can be found
endif()

folder_source_group(Components)
folder_source_group(CompilerWarnings)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subfolder(Components Assertion)
folder_source_group_subfolder(Components Console)
folder_source_group_subsubfolder(Components Console Windows)
folder_source_group_subfolder(Components Docopt)
folder_source_group_subfolder(Components Exception)
folder_source_group_subfolder(Components FileSystem)
folder_source_group_subfolder(Components FunctionCallers)
folder_source_group_subsubfolder(Components FunctionCallers Member)
folder_source_group_subsubfolder(Components FunctionCallers NonMember)
folder_source_group_subfolder(Components Iteration)
folder_source_group_subsubfolder(Components Iteration ForEach)
folder_source_group_subsubfolder(Components Iteration Transform)
folder_source_group_subfolder(Components Memory)
folder_source_group_subfolder(Components Process)
folder_source_group_subsubfolder(Components Process Linux)
folder_source_group_subsubfolder(Components Process Windows)
folder_source_group_subfolder(Components Time)
folder_source_group_subfolder(Components Types)
folder_source_group(Enums)
folder_source_group(Utilities)
folder_source_group(ValueTypes)

file(GLOB_RECURSE Sources *.h *.cpp *.ui)
source_group("" FILES ${Sources})

add_library(libCloudundancy ${Sources})

IfMSVCEnablePrecompiledHeaders()

if(UNIX)
   if(CodeCovMode)
     target_link_libraries(libCloudundancy CodeCovLibraryInterface)
   endif()
endif()
